--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
