--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "react-select": "^5.10.1",
+    "sonner": "^2.0.5",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
