--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://books-social-g338.onrender.com
+# VITE_API_URL=https://books-social-g338.onrender.com
+VITE_API_URL=https://books-social.onrender.com
